# customer-churn-analysis

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  download_dataset.py  pyproject.toml  requirements.txt  run_business_impact.py  train_and_save_model.py
.github/workflows/: ci.yml  deploy_streamlit.yml
api/: app.py
app/: streamlit_app.py
docs/: ARCHITECTURE.md  USAGE.md
llm/: llm_explainer.py
models/: model_manager.py
notebooks/: eda_telco_churn.ipynb  eda_telco_churn.py
services/: business_logic.py
src/: ai_router.py  business_impact.py  chat_memory.py  config_utils.py  evaluation_utils.py  executive_report.py  feature_parser.py  llm_explainer.py  logging_utils.py  model_debugger.py  model_training.py  persona_generator.py  preprocessing.py  query_agent.py  retention_strategy.py  segmentation.py  shap_explain.py
src/customer_churn_analysis.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_business_impact.py  test_evaluation_utils.py  test_model_training.py  test_preprocessing.py  test_streamlit_app.py
ui/: streamlit_app.py
utils/: config_utils.py
